--- a/Resources/Public/slider/Royal-Slider/css/style.css
+++ b/Resources/Public/slider/Royal-Slider/css/style.css
@@ -67,23 +67,31 @@
 }
 
 @media screen and (min-width:960px) and (min-height:660px) {
-  .heroSlider .rsOverflow,
+  /* .heroSlider .rsOverflow,
   .royalSlider.heroSlider {
       height: 520px !important;
   }
+  .rsFullscreen.heroSlider .rsOverflow,
+  .rsFullscreen .royalSlider.heroSlider {
+    height: 100% !important;
+  } */
 }
 
 @media screen and (min-width:960px) and (min-height:1000px) {
-    .heroSlider .rsOverflow,
+    /* .heroSlider .rsOverflow,
     .royalSlider.heroSlider {
         height: 660px !important;
     }
+    .rsFullscreen.heroSlider .rsOverflow,
+    .rsFullscreen .royalSlider.heroSlider {
+      height: 100% !important;
+    } */
 }
 @media screen and (min-width: 0px) and (max-width: 800px) {
-  .royalSlider.heroSlider,
+  /* .royalSlider.heroSlider,
   .royalSlider.heroSlider .rsOverflow {
     height: 300px !important;
-  }
+  } */
   .infoBlock {
     padding: 10px;
     height: auto;
@@ -242,3 +250,15 @@
 }
 
 /*gallery slider*/
+
+/*18-5-2022*/
+.heroSlider.royalSlider {
+  width: 100%;
+} 
+/*18-5-2022*/
+
+/* Nav Arrow */
+.rsMinW .rsArrow  {
+  z-index: 99 !important;
+}
+/* Nav Arrow */
