Solved Issue in version compatibility in Version 7 To 10

--- a/Resources/Private/Partials/RoyalSlider/Items.html
+++ b/Resources/Private/Partials/RoyalSlider/Items.html
@@ -3,7 +3,8 @@
       xmlns:n="http://typo3.org/ns/GeorgRinger/News/ViewHelpers"
       xmlns:F="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers">
 
-    <f:alias map="{mediaElement: newsItem.mediaPreviews.0}">
+      
+    <f:alias map="{mediaElement: newsItem.falMedia.0}">
         <div class="rsContent">
 
             <f:if condition="{mediaElement}">
