--- a/Resources/Private/Partials/RoyalSlider/Items.html
+++ b/Resources/Private/Partials/RoyalSlider/Items.html
@@ -1,7 +1,6 @@
 <html data-namespace-typo3-fluid="true"
       data-namespace-typo3-fluid="true" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-      xmlns:n="http://typo3.org/ns/GeorgRinger/News/ViewHelpers"
-      xmlns:F="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers">
+      xmlns:n="http://typo3.org/ns/GeorgRinger/News/ViewHelpers">
 
     <f:alias map="{mediaElement: newsItem.mediaPreviews.0}">
         <div class="rsContent">
